Computing site and double-site marginals

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import itertools\n",
     "import numpy as np"
    ]
   },
@@ -104,6 +105,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can order the amino acids any way we like\n",
+    "# Here is a sorting based on some amino acid properties. \n",
+    "# https://proteinstructures.com/Structure/Structure/amino-acids.html\n",
+    "AMINO_ACIDS = np.array([aa for aa in \"RKDEQNHSTCYWAILMFVPG-\"], \"S1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute the weights of each sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -138,7 +158,7 @@
     "    print(\"Loading weights from : \", weights_file)\n",
     "\n",
     "else:\n",
-    "    weights = np.zeros(M, dtype='f')\n",
+    "    weights = np.zeros(M)\n",
     "\n",
     "    for i in range(M):\n",
     "        weights[i] = 1. / (np.sum(np.sum(arr[i, :] != arr, axis=1) < hamming_cutoff * L))\n",
@@ -179,8 +199,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute Single and Double site marginals"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing i=50, a=19, AA=G\n"
+     ]
+    }
+   ],
+   "source": [
+    "single_site_marginal_file = os.path.join(datadir, \"DHFR.single.npy\")\n",
+    "double_site_marginal_file = os.path.join(datadir, \"DHFR.double.npy\")\n",
+    "\n",
+    "# single site marginals. Eqn 29 in 2013 Coco et al. paper\n",
+    "f_i_a = np.zeros((L, q))\n",
+    "# double site marginals\n",
+    "f_i_j_a_b = np.zeros((L*q, L*q))\n",
+    "\n",
+    "normalizer = 1. / (M_eff + pseudo_count)\n",
+    "additive_factor_single = pseudo_count / q\n",
+    "additive_factor_double = pseudo_count / (q*q)\n",
+    "\n",
+    "# This is a dictionary where the index (i,a) points to a \n",
+    "# numpy array of integers which is 1 if amino acid a is in row i\n",
+    "# and 0 otherwise \n",
+    "ia = dict()\n",
+    "for i, a in itertools.product(range(L), range(q)):\n",
+    "    ia[(i, a)] = (arr[:, i] == AMINO_ACIDS[a]).astype(np.int)\n",
+    "\n",
+    "for i, a in itertools.product(range(L), range(q)):\n",
+    "    delta_i_a = ia[(i,a)]\n",
+    "    f_i_a[i, a] =  normalizer * (additive_factor_single +\n",
+    "                    np.sum(weights * delta_i_a))\n",
+    "    for j, b in itertools.product(range(L), range(q)):\n",
+    "        f_i_j_a_b[i + q*a, j + q*b] = normalizer * (additive_factor_double +\n",
+    "                    np.sum(weights * ia[(j,b)] * delta_i_a ))\n",
+    "    if progress_bar:\n",
+    "        clear_output(wait=True)\n",
+    "    print(\"Finished processing i={}, a={}, AA={}\".format(i, a, AMINO_ACIDS[a].tostring().decode()))\n",
+    "    \n",
+    "del ia\n",
+    "np.save(single_site_marginal_file, f_i_a)\n",
+    "np.save(double_site_marginal_file, f_i_j_a_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": []
