Loading single and double site marginals from cache

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,14 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished processing i=50, a=19, AA=G\n"
+      "Loading single site marginals from  ../data/DHFR.single.npy\n",
+      "Loading double site marginals from  ../data/DHFR.double.npy\n"
      ]
     }
    ],
@@ -222,41 +223,50 @@
     "single_site_marginal_file = os.path.join(datadir, \"DHFR.single.npy\")\n",
     "double_site_marginal_file = os.path.join(datadir, \"DHFR.double.npy\")\n",
     "\n",
-    "# single site marginals. Eqn 29 in 2013 Coco et al. paper\n",
-    "f_i_a = np.zeros((L, q))\n",
-    "# double site marginals\n",
-    "f_i_j_a_b = np.zeros((L*q, L*q))\n",
+    "if os.path.isfile(double_site_marginal_file) and os.path.isfile(single_site_marginal_file):\n",
+    "    f_i_a = np.load(single_site_marginal_file)\n",
+    "    print(\"Loading single site marginals from \", single_site_marginal_file)\n",
     "\n",
-    "normalizer = 1. / (M_eff + pseudo_count)\n",
-    "additive_factor_single = pseudo_count / q\n",
-    "additive_factor_double = pseudo_count / (q*q)\n",
-    "\n",
-    "# This is a dictionary where the index (i,a) points to a \n",
-    "# numpy array of integers which is 1 if amino acid a is in row i\n",
-    "# and 0 otherwise \n",
-    "ia = dict()\n",
-    "for i, a in itertools.product(range(L), range(q)):\n",
-    "    ia[(i, a)] = (arr[:, i] == AMINO_ACIDS[a]).astype(np.int)\n",
-    "\n",
-    "for i, a in itertools.product(range(L), range(q)):\n",
-    "    delta_i_a = ia[(i,a)]\n",
-    "    f_i_a[i, a] =  normalizer * (additive_factor_single +\n",
-    "                    np.sum(weights * delta_i_a))\n",
-    "    for j, b in itertools.product(range(L), range(q)):\n",
-    "        f_i_j_a_b[i + q*a, j + q*b] = normalizer * (additive_factor_double +\n",
-    "                    np.sum(weights * ia[(j,b)] * delta_i_a ))\n",
-    "    if progress_bar:\n",
-    "        clear_output(wait=True)\n",
-    "    print(\"Finished processing i={}, a={}, AA={}\".format(i, a, AMINO_ACIDS[a].tostring().decode()))\n",
+    "    f_i_j_a_b = np.load(double_site_marginal_file)\n",
+    "    print(\"Loading double site marginals from \", double_site_marginal_file)    \n",
     "    \n",
-    "del ia\n",
-    "np.save(single_site_marginal_file, f_i_a)\n",
-    "np.save(double_site_marginal_file, f_i_j_a_b)"
+    "else:\n",
+    "    # single site marginals. Eqn 29 in 2013 Coco et al. paper\n",
+    "    f_i_a = np.zeros((L, q))\n",
+    "    # double site marginals\n",
+    "    f_i_j_a_b = np.zeros((L*q, L*q))\n",
+    "\n",
+    "    normalizer = 1. / (M_eff + pseudo_count)\n",
+    "    additive_factor_single = pseudo_count / q\n",
+    "    additive_factor_double = pseudo_count / (q*q)\n",
+    "\n",
+    "    # This is a dictionary where the index (i,a) points to a \n",
+    "    # numpy array of integers which is 1 if amino acid a is in row i\n",
+    "    # and 0 otherwise \n",
+    "    ia = dict()\n",
+    "    for i, a in itertools.product(range(L), range(q)):\n",
+    "        ia[(i, a)] = (arr[:, i] == AMINO_ACIDS[a]).astype(np.int)\n",
+    "\n",
+    "    for i, a in itertools.product(range(L), range(q)):\n",
+    "        delta_i_a = ia[(i,a)]\n",
+    "        f_i_a[i, a] =  normalizer * (additive_factor_single +\n",
+    "                        np.sum(weights * delta_i_a))\n",
+    "        for j, b in itertools.product(range(L), range(q)):\n",
+    "            f_i_j_a_b[i + q*a, j + q*b] = normalizer * (additive_factor_double +\n",
+    "                        np.sum(weights * ia[(j,b)] * delta_i_a ))\n",
+    "        if progress_bar:\n",
+    "            clear_output(wait=True)\n",
+    "        print(\"Finished processing i={}, a={}, AA={}\".format(i, a, AMINO_ACIDS[a].tostring().decode()))\n",
+    "\n",
+    "    del ia\n",
+    "    np.save(single_site_marginal_file, f_i_a)\n",
+    "    np.save(double_site_marginal_file, f_i_j_a_b)\n",
+    "    print(\"Finished computing sigle and double site marginals and saved to cache files\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
