Fixing indexing in matrices

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -161,7 +161,7 @@
     "    weights = np.zeros(M)\n",
     "\n",
     "    for i in range(M):\n",
-    "        weights[i] = 1. / (np.sum(np.sum(arr[i, :] != arr, axis=1) < hamming_cutoff * L))\n",
+    "        weights[i] = 1. / (np.sum(np.sum(arr[i, :] != arr, axis=1) <= hamming_cutoff * L))\n",
     "        if i % 100 == 0:\n",
     "            if progress_bar:\n",
     "                clear_output(wait=True)\n",
@@ -236,10 +236,6 @@
     "    # double site marginals\n",
     "    f_i_j_a_b = np.zeros((L*q, L*q))\n",
     "\n",
-    "    normalizer = 1. / (M_eff + pseudo_count)\n",
-    "    additive_factor_single = pseudo_count / q\n",
-    "    additive_factor_double = pseudo_count / (q*q)\n",
-    "\n",
     "    # This is a dictionary where the index (i,a) points to a \n",
     "    # numpy array of integers which is 1 if amino acid a is in row i\n",
     "    # and 0 otherwise \n",
@@ -249,11 +245,9 @@
     "\n",
     "    for i, a in itertools.product(range(L), range(q)):\n",
     "        delta_i_a = ia[(i,a)]\n",
-    "        f_i_a[i, a] =  normalizer * (additive_factor_single +\n",
-    "                        np.sum(weights * delta_i_a))\n",
+    "        f_i_a[i, a] =  np.sum(weights * delta_i_a)\n",
     "        for j, b in itertools.product(range(L), range(q)):\n",
-    "            f_i_j_a_b[i + q*a, j + q*b] = normalizer * (additive_factor_double +\n",
-    "                        np.sum(weights * ia[(j,b)] * delta_i_a ))\n",
+    "            f_i_j_a_b[a + q*i, b + q*j] = np.sum(weights * ia[(j,b)] * delta_i_a )\n",
     "        if progress_bar:\n",
     "            clear_output(wait=True)\n",
     "        print(\"Finished processing i={}, a={}, AA={}\".format(i, a, AMINO_ACIDS[a].tostring().decode()))\n",
@@ -266,10 +260,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add Pseudo count\n",
+    "f_i_a = 1. / (M_eff + pseudo_count) * (pseudo_count/q + f_i_a)\n",
+    "f_i_j_a_b = 1. / (M_eff + pseudo_count) * (pseudo_count/(q*q) + f_i_j_a_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Covariance Matrix\n",
+    "C_i_j_a_b = np.zeros(((q-1)*L, (q-1)*L), dtype=f_i_j_a_b.dtype)\n",
+    "\n",
+    "for i, a in itertools.product(range(L), range(q-1)):\n",
+    "    for j, b in itertools.product(range(L), range(q-1)):\n",
+    "        C_i_j_a_b[a + i*(q-1), b + j*(q-1)] = f_i_j_a_b[a + q*i, b + q*j] -  f_i_a[i, a] * f_i_a[j, b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C_self = np.zeros_like(C_i_j_a_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, a in itertools.product(range(L), range(q-1)):\n",
+    "    for b in range(q-1):\n",
+    "        C_self[a + i*(q-1), b + i*(q-1)] = C_i_j_a_b[a + i*(q-1), b + i*(q-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.linalg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix is singular and may not have a square root.\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = scipy.linalg.sqrtm(C_self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l, v = np.linalg.eigh(C_i_j_a_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.8410949583068415e-15"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = C_i_j_a_b[:(q-1), :(q-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-2.28615051e-18, -8.52378583e-19, -2.01509782e-20, -9.81403051e-21,\n",
+       "        -1.86249946e-26, -8.76002263e-30, -2.12910979e-36, -1.01916114e-36,\n",
+       "        -6.27244354e-37,  1.82626432e-38,  3.59199208e-37,  1.43491997e-36,\n",
+       "         3.45193416e-26,  9.73826072e-22,  1.22307603e-21,  1.15373194e-20,\n",
+       "         4.21600444e-20,  3.35534087e-18,  1.77114728e-07,  1.13378689e-02]),\n",
+       " array([[ 9.07206865e-01,  2.15027211e-01, -4.05752679e-03,\n",
+       "          1.11873476e-03,  4.93812973e-07,  1.80194042e-07,\n",
+       "         -7.86591673e-14,  6.38176929e-14,  2.24678636e-14,\n",
+       "         -1.83130335e-14, -3.99031262e-14,  1.40497337e-13,\n",
+       "          9.02424024e-08,  1.78111659e-02,  8.96798588e-03,\n",
+       "         -1.19973074e-03, -4.21733086e-03, -2.78698440e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [ 2.93933286e-01, -4.00363448e-01,  7.52971782e-03,\n",
+       "         -3.05519304e-04,  8.92891275e-08,  6.63494475e-08,\n",
+       "         -2.89621145e-14,  2.34388489e-14,  8.28018063e-15,\n",
+       "         -6.66848980e-15, -1.46099156e-14,  5.16495738e-14,\n",
+       "          2.77798679e-08,  3.48492498e-03,  2.61227432e-03,\n",
+       "         -4.35591048e-03, -2.73110171e-03,  8.37005713e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-7.98587133e-02,  1.00762260e-01,  7.57850260e-01,\n",
+       "          3.56723211e-01, -3.30068053e-06,  1.85710914e-06,\n",
+       "         -8.07590175e-13,  6.53352102e-13,  2.31344088e-13,\n",
+       "         -1.87341524e-13, -4.09163023e-13,  1.44208618e-12,\n",
+       "          3.00900595e-07, -8.08011993e-02,  1.76938018e-01,\n",
+       "         -2.71537048e-01, -3.43024543e-01,  3.92520353e-03,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-6.35147725e-02, -1.15296052e-01, -3.92258825e-01,\n",
+       "          4.45927275e-01, -5.16198422e-07,  4.38051130e-09,\n",
+       "         -1.73005328e-15,  1.45192435e-15,  5.22809369e-16,\n",
+       "         -3.07579547e-16, -8.96781541e-16,  3.24473800e-15,\n",
+       "          6.98466489e-07, -1.37401139e-02,  4.17196136e-02,\n",
+       "          4.51737496e-01, -6.02423470e-01, -9.17217299e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-6.45409988e-02, -1.02631823e-01, -1.69966985e-01,\n",
+       "         -5.34768453e-01,  3.10222021e-06, -2.17375806e-06,\n",
+       "          9.46410467e-13, -7.65271612e-13, -2.71034464e-13,\n",
+       "          2.19251417e-13,  4.78565108e-13, -1.68795879e-12,\n",
+       "         -6.66373317e-07,  8.59531270e-02, -2.40586616e-01,\n",
+       "         -4.94812397e-01, -5.47029489e-01, -9.19406553e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44134001e-02, -1.35730547e-01,  3.86312274e-02,\n",
+       "         -1.76252440e-02,  2.77712394e-01, -1.73056029e-01,\n",
+       "         -7.52810472e-01, -7.22293794e-02,  8.99349589e-02,\n",
+       "          8.34601975e-02,  5.80811491e-02,  3.99539461e-01,\n",
+       "          9.12272703e-02, -1.31186550e-01, -1.02318172e-01,\n",
+       "          4.99450677e-02,  1.30605099e-01, -1.07498420e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.85790574e-02, -2.68680291e-01,  1.44546799e-01,\n",
+       "         -3.48172818e-02, -3.76026550e-01, -3.21873133e-04,\n",
+       "          1.80640425e-10, -1.99098833e-10, -4.37750350e-11,\n",
+       "          4.89999720e-11,  8.83950295e-11, -3.45810946e-10,\n",
+       "          5.12189384e-01,  6.15640670e-01,  3.09629240e-02,\n",
+       "          1.30162966e-01,  1.37223777e-01, -1.73674587e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44135036e-02, -1.35730200e-01,  3.86942341e-02,\n",
+       "         -1.75638515e-02, -2.44881866e-01,  2.30764999e-01,\n",
+       "         -2.00867628e-02, -5.97768787e-03, -7.49952630e-01,\n",
+       "         -1.28916127e-01,  2.70903689e-01,  1.17432163e-01,\n",
+       "         -2.92383958e-01, -1.31030633e-01, -1.02566290e-01,\n",
+       "          4.99851088e-02,  1.30618743e-01, -1.07498347e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44135036e-02, -1.35730200e-01,  3.86942341e-02,\n",
+       "         -1.75638515e-02, -2.44881866e-01,  2.30764956e-01,\n",
+       "          1.08881162e-01,  1.61375389e-01,  6.23392699e-01,\n",
+       "         -1.38496358e-02,  4.89177269e-01,  2.57851392e-02,\n",
+       "         -2.92383958e-01, -1.31030633e-01, -1.02566290e-01,\n",
+       "          4.99851088e-02,  1.30618743e-01, -1.07498347e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44135036e-02, -1.35730200e-01,  3.86942341e-02,\n",
+       "         -1.75638515e-02, -2.44881866e-01,  2.30764915e-01,\n",
+       "         -8.87947002e-02, -1.55397457e-01,  1.26560017e-01,\n",
+       "          1.42765693e-01, -7.60081111e-01, -1.43216765e-01,\n",
+       "         -2.92383958e-01, -1.31030633e-01, -1.02566290e-01,\n",
+       "          4.99851088e-02,  1.30618743e-01, -1.07498347e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44134001e-02, -1.35730547e-01,  3.86312274e-02,\n",
+       "         -1.76252440e-02,  2.77712395e-01, -1.73054950e-01,\n",
+       "          3.70251257e-02, -3.39930230e-01,  4.62004926e-02,\n",
+       "         -6.07468245e-01,  5.46462099e-02, -5.08859884e-01,\n",
+       "          9.12272704e-02, -1.31186550e-01, -1.02318172e-01,\n",
+       "          4.99450677e-02,  1.30605099e-01, -1.07498420e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44134001e-02, -1.35730547e-01,  3.86312274e-02,\n",
+       "         -1.76252440e-02,  2.77712394e-01, -1.73055801e-01,\n",
+       "          4.16423274e-01,  5.76777856e-01, -2.46273411e-02,\n",
+       "         -2.07561893e-01, -2.76018485e-01,  3.52199068e-01,\n",
+       "          9.12272702e-02, -1.31186550e-01, -1.02318172e-01,\n",
+       "          4.99450677e-02,  1.30605099e-01, -1.07498420e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.44134001e-02, -1.35730547e-01,  3.86312274e-02,\n",
+       "         -1.76252440e-02,  2.77712395e-01, -1.73054925e-01,\n",
+       "          2.99362373e-01, -1.64618489e-01, -1.11508197e-01,\n",
+       "          7.31570010e-01,  1.63291278e-01, -2.42879182e-01,\n",
+       "          9.12272705e-02, -1.31186550e-01, -1.02318172e-01,\n",
+       "          4.99450677e-02,  1.30605099e-01, -1.07498420e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-8.55639136e-02,  1.05070778e-01, -1.53039757e-01,\n",
+       "          5.54229904e-03, -2.22522948e-01, -6.92866025e-01,\n",
+       "          3.01624959e-07, -2.44272559e-07, -8.62738441e-08,\n",
+       "          7.01045486e-08,  1.52984228e-07, -5.38712835e-07,\n",
+       "         -4.26410264e-01,  1.95099508e-01,  3.60118155e-01,\n",
+       "         -1.20754823e-01,  1.07443578e-01,  1.65900026e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-8.55640219e-02,  1.05071166e-01, -1.52977046e-01,\n",
+       "          5.60312215e-03,  2.99224552e-01,  3.46688829e-01,\n",
+       "          2.72705071e-01, -4.84371788e-01,  6.95406495e-02,\n",
+       "         -6.53716075e-02, -1.38496729e-02,  4.26280183e-01,\n",
+       "         -4.28675148e-02,  1.95218092e-01,  3.59865519e-01,\n",
+       "         -1.20715433e-01,  1.07457035e-01,  1.65900771e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-8.55640219e-02,  1.05071166e-01, -1.52977046e-01,\n",
+       "          5.60312215e-03,  2.99224552e-01,  3.46688949e-01,\n",
+       "         -2.72705373e-01,  4.84372032e-01, -6.95405632e-02,\n",
+       "          6.53715373e-02,  1.38495198e-02, -4.26279644e-01,\n",
+       "         -4.28675148e-02,  1.95218092e-01,  3.59865519e-01,\n",
+       "         -1.20715433e-01,  1.07457035e-01,  1.65900771e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-8.13984977e-02,  2.38021537e-01, -2.58801275e-01,\n",
+       "          2.28830865e-02, -3.76322703e-01,  1.65008854e-05,\n",
+       "          3.34339522e-11, -7.99554203e-11, -1.64194537e-12,\n",
+       "          1.48141547e-11,  1.37660816e-11, -8.29397462e-11,\n",
+       "          5.12256063e-01, -5.51369956e-01,  2.26227375e-01,\n",
+       "         -2.00876184e-01,  1.00858775e-01,  8.27664067e-02,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-5.37663664e-13, -1.28146105e-12, -1.55583012e-15,\n",
+       "         -2.65894484e-14,  8.01687899e-18, -1.23045432e-17,\n",
+       "          1.42232190e-18, -4.18915878e-18,  2.93463449e-19,\n",
+       "          8.16799467e-18,  4.74664237e-18,  4.37108601e-18,\n",
+       "         -1.86366480e-18,  2.53649098e-16,  3.31553090e-15,\n",
+       "          2.00060237e-14,  1.05665964e-13,  3.29411498e-12,\n",
+       "         -9.74679015e-01, -2.23608627e-01],\n",
+       "        [-1.08161392e-01,  4.83680458e-01, -1.33855493e-01,\n",
+       "          3.56480039e-01,  2.19255732e-04, -2.79485014e-04,\n",
+       "          1.21602480e-10, -9.84276003e-11, -3.48028243e-11,\n",
+       "          2.82411968e-11,  6.16481008e-11, -2.17148228e-10,\n",
+       "         -5.78123323e-05,  2.60547039e-01, -6.28000382e-01,\n",
+       "         -1.70832783e-01,  1.47987891e-01,  2.08263806e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01],\n",
+       "        [-1.07500652e-01,  4.84379824e-01,  2.37399565e-01,\n",
+       "         -5.06797105e-01, -4.47519953e-09,  4.66707287e-09,\n",
+       "         -6.21664939e-15,  6.57048227e-15,  1.57654567e-15,\n",
+       "         -1.34058644e-15, -2.31817136e-15,  9.97311871e-15,\n",
+       "          1.32340145e-09, -5.22324976e-03,  1.82811721e-02,\n",
+       "          5.74163683e-01, -1.23278781e-01,  2.06792848e-01,\n",
+       "          5.12993374e-02, -2.23606701e-01]]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.eigh(m)"
+   ]
   }
  ],
  "metadata": {
