Write up on Maxent

--- a/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/PCA_to_DCA.ipynb
@@ -24,6 +24,7 @@
     "2. [Re-weighting Sequences](#reweight)\n",
     "3. [Compute Single and Double Site marginals](#marginals)\n",
     "4. [Compute the Covariance matrix](#covmat)\n",
+    "5. [Maximum Entropy Modeling and Direct Coupling Analysis](#maxent)\n",
     "\n",
     "***\n"
    ]
@@ -276,7 +277,7 @@
    "source": [
     "# q is the alphabet\n",
     "q = len(AMINO_ACIDS)\n",
-    "pseudo_count = round(M_eff)"
+    "pseudo_count = 10 * round(M_eff)"
    ]
   },
   {
@@ -285,14 +286,14 @@
    "source": [
     "### Compute Weighted Single and Double site marginals <a id=\"marginals\"></a>\n",
     "\n",
-    "We first compute the weighted counts $$\\sum_{m=1}^M w_m \\delta_{a, a_i^m}$$ and then $$\\sum_{m=1}^M w_m \\delta_{a, a_i^m} \\delta_{b, a_j^m}$$ and save them to disk. The second computation takes a long time since the arrays are too large to compute outer products and broadcast them. \n",
+    "We first compute the weighted counts for the single site marginals $$\\sum_{m=1}^M w_m \\delta_{a, a_i^m},$$ and then we compute the weighted counts for the double site marginals $$\\sum_{m=1}^M w_m \\delta_{a, a_i^m} \\delta_{b, a_j^m}.$$ The second computation takes a long time since the arrays are too large to compute outer products and broadcast them. \n",
     "\n",
-    "To get the marignals we need to divide these counts above by the sum of the weights. However, we only do this after adding a pseudocount in Eqns 29 and 30 in 2013Cocco.\n"
+    "To get the actual marignals we need to divide these weighted counts above by the sum of the weights. However, we only do this after adding a pseudocount to regularize the resulting covariance matrix. (Eqns 29 and 30 in 2013Cocco.)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -354,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add Pseudo count and compute the marginals (Eqn 29 and 30 2013Cocco)\n",
     "\n",
-    "f_i_a = 1. / (M_eff + pseudo_count) * (pseudo_count/q + f_i_a)\n",
-    "f_i_j_a_b = 1. / (M_eff + pseudo_count) * (pseudo_count/(q*q) + f_i_j_a_b)"
+    "f_i_a = (1. / (M_eff + pseudo_count)) * (pseudo_count/q + f_i_a)\n",
+    "f_i_j_a_b = (1. / (M_eff + pseudo_count)) * (pseudo_count/(q*q) + f_i_j_a_b)"
    ]
   },
   {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +393,63 @@
     "C_i_j_a_b = f_i_j_a_b  - f_i_a[:, :, np.newaxis, np.newaxis] * f_i_a[np.newaxis, np.newaxis, :, :] \n",
     "\n",
     "# we project the covariance matrix down the first q-1 elements\n",
+    "# Since the frequencies add up to 1 we can discard amino-acid value (a = q) for each site\n",
+    "# without losing any information\n",
     "C_i_j_a_b = C_i_j_a_b[:, :(q-1), :, :(q-1)]\n",
     "print(\"C_i_j_a_b.shape = {}\".format(C_i_j_a_b.shape)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.9646153e-21, -6.6297967e-35, -4.1994404e-37, -4.1363380e-38,\n",
+       "       -1.8372929e-38, -7.0018708e-39, -9.7111385e-41, -7.3652247e-42,\n",
+       "       -0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.5687536e-41,\n",
+       "        1.0106711e-39,  1.4769055e-38,  3.3672347e-38,  4.3045047e-38,\n",
+       "        2.7075972e-37,  4.6586812e-21,  2.2118905e-10,  4.5262288e-05],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C00 = C_i_j_a_b[1, :, 1, :]\n",
+    "np.linalg.eigvalsh(C00)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Maximum Entropy Modeling and Direct Coupling Analysis<a id=\"maxent\"></a>\n",
+    "\n",
+    "It is hard to infer contact information from this covariance matrix as a non-zero covariance between two sites does not imply that they directly interact or are in contact. If we have site $i$ interacting  with $j$ and site $j$ interacting with $k$, then $i$ and $k$ will show correlations even though they do not directly interact. \n",
+    "\n",
+    "So we decide to look for a (protein family specific) probability model $\\bf P$ on the level of sequences that satisfies three conditions. \n",
+    "1. The single site marginals of $\\bf P$ are equal to $f_i(a)$.   \n",
+    "In other words, the sum of probabilities of all proteins with a in the $i$-th position is equal to the value of $f_i(a)$.\n",
+    "2. The double site marginals of $\\bf P$ are equal to $f_{ij}(a,b)$.  \n",
+    "In other words, the sum of probabilities of all proteins with $a$ in the $i$-th position and $b$ in the $j$-th position is equal to $f_{ij}(a,b)$.\n",
+    "3. $\\bf P$ has the **maximum possible entropy** so we maximize\n",
+    "$$ H[{\\bf P}] = - \\sum_{\\text{all sequences of length L}} P \\log P$$\n",
+    "\n",
+    "Condition 1 gives us $Lq$ constraints and Condition 2 gives us $\\frac{L(L+1)}{2} q^2$ additional constraints. This allows us to do a gigantic constrained optimization using Lagrange Multipliers and come up with an analytic form for $\\bf P$.\n",
+    "$$ P(a_1, \\ldots, a_L) = \\frac{1}{Z} \\exp{ \\bigg\\{ \\frac{1}{2} \\sum_{i,j} e_{ij}(a_i, a_j) + \\sum_{i} h_i(a_i) \\bigg\\} }$$\n",
+    "\n",
+    "Here $Z$ is a normalization constant that makes sure that all the probabilities add up to $1$. The parameters $e_{ij}(a,b)$ are the direct couplings and $h_i(a)$ are the local fields acting on single sites. These values have to be determined so that Conditions 1 and 2 are satisfied. \n",
+    "\n",
+    "It is not possible to compute these parameters exactly for reasonably sized proteins as calculating $Z$ and the marginals require summations over all $q^L$ possible amino-acid sequences. \n",
+    "\n",
+    "**Mean Field Approximation** This is an approximation in statistical physics to help solve this intractable problem. We expand the exponential of the sum of the direct couplings using a Taylor Series expansion and then only keep the linear terms. With this approximation the values for the direct couplings are $$e_{ij}(a,b) = (C^{-1})_{ij}(a,b) \\qquad \\forall i,j, \\enspace \\forall a,b=1, \\ldots, q-1$$ and $$e_{ij}(a,q) = e_{ij}(q,a) = 0 \\qquad \\forall a = 1, \\ldots, q.$$\n",
+    "This approximation approach is known as **direct coupling analysis**. Once the direct couplings have been calculated, they can be used to predict contacts between residues. "
    ]
   }
  ],
